exports[`<PushToMDM />  render tests  should match snapshot if configuredMDMType is configured 1`] = `
<button
  aria-disabled={false}
  className="fn-secondary"
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    className="sr-only">
    This app has already been pushed to MDM. Click to re-push.
  </span>
  
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Re-Push to MDM"
      }
    } />
</button>
`;

exports[`<PushToMDM />  render tests  should match snapshot if configuredMDMType is null 1`] = `
<button
  aria-disabled={true}
  className="fn-primary"
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    className="sr-only">
    Push to MDM is not available. Configure an MDM to push apps to the system.
  </span>
  
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Push to MDM"
      }
    } />
</button>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is FAILED 1`] = `
<button
  aria-disabled={false}
  className="fn-primary"
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    className="sr-only">
    This app failed to push to MDM. Click again to re-push.
  </span>
  
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Push to MDM"
      }
    } />
</button>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is INSTALLED 1`] = `
<button
  aria-disabled={false}
  className="fn-secondary"
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    className="sr-only">
    This app has already been pushed to MDM. Click to re-push.
  </span>
  
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Re-Push to MDM"
      }
    } />
</button>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is IN_PROGRESS 1`] = `
<button
  aria-disabled={false}
  className="fn-primary"
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    className="sr-only">
    Submitting the app to MDM.
  </span>
  <i
    className="icon-reload" />
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Submitting&hellip;"
      }
    } />
</button>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is NEEDS_UPDATE 1`] = `
<button
  aria-disabled={false}
  className="fn-primary"
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    className="sr-only">
    This app has been pushed to MDM and has an available update. Click to push the update.
  </span>
  
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Update"
      }
    } />
</button>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is NOT_INSTALLED 1`] = `
<button
  aria-disabled={false}
  className="fn-primary"
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    className="sr-only">
    Push The Greatest App in the West to MDM
  </span>
  
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Push to MDM"
      }
    } />
</button>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is PENDING 1`] = `
<button
  aria-disabled={false}
  className="fn-primary"
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    className="sr-only">
    Submitting the app to MDM.
  </span>
  <i
    className="icon-reload" />
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Submitting&hellip;"
      }
    } />
</button>
`;

exports[`<PushToMDM />  test all appCatalogMDMStatuses conditions should match snapshot if appCatalogMDMStatuses is REPUSHED 1`] = `
<button
  aria-disabled={false}
  className="fn-secondary"
  id="pushBtn12345"
  onClick={[Function anonymous]}>
  <span
    className="sr-only">
    This app has already been pushed to MDM. Click to re-push.
  </span>
  
  <span
    aria-hidden="true"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Re-Push to MDM"
      }
    } />
</button>
`;
